<resources>
    <string name="app_name">InClass09</string>
    <string name="new_quote">add</string>
    <string name="credit_empty">Please enter credit hours</string>
    <string name="course_name">Course Name</string>
    <string name="credit_hours">Credit Hours</string>
    <string name="course_number">Course Number</string>
    <string name="grade">Grade:</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="a">A</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="num_empty">Please Enter the Course Number</string>
    <string name="name_empty">The course name is empty</string>
</resources>