<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourseFragment"
    android:id="@+id/frameLayout" >

    <EditText
        android:id="@+id/editTextCourseName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/course_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseNumber" />

    <EditText
        android:id="@+id/editTextCourseNumber"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/course_number"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCreditHours"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/credit_hours"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseName" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGrade">

        <RadioButton
            android:id="@+id/radioGradeA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/a"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioGradeB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioGradeC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioGradeD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioGradeF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:textSize="24sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/grade"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreditHours" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="303dp"
        android:layout_height="46dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="15dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="301dp"
        android:layout_marginLeft="301dp"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />
</androidx.constraintlayout.widget.ConstraintLayout>